# django-stripe

./: .editorconfig  .env.example  .flake8  Dockerfile  README.md  db.sqlite3  pyproject.toml
TZ/: Test task for Python developer.md  Test_task_for_Python_developer.md
djstripe/: settings.py  urls.py
payments/: admin.py  models.py  tests.py  urls.py  views.py
payments/migrations/: 0001_add_item.py  0002_add_order.py  0003_add_discount_and_tax.py  0004_add_currency.py
templates/: cancel.html  checkout.html  item.html  success.html
